--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "predeploy": "expo export -p web",
+    "deploy-hosting": "npm run predeploy && firebase deploy --only hosting"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@lottiefiles/react-lottie-player": "^3.5.3",
+    "@react-native-async-storage/async-storage": "^1.22.3",
     "@react-navigation/native": "^6.0.2",
     "expo": "~50.0.11",
     "expo-font": "~11.10.3",
@@ -23,12 +27,19 @@
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
+    "firebase": "^10.8.1",
+    "lottie-react-native": "^6.7.0",
+    "nativewind": "^4.0.36",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-reanimated": "^3.7.2",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6"
+    "react-native-select-dropdown": "^3.4.0",
+    "react-native-web": "~0.19.6",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
